# cppEditLVGL

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  lv_conf.h  patches.md  platform_abstraction.plan.md
libs/lvgl/: lv_version.h.in  lvgl.pc.in
libs/lvgl/src/core/: lv_obj_scroll.c
src/: app.cpp  app.h  editor.cpp  editor.h  editor_word_count.cpp  editor_word_count.h  file_manager.cpp  file_manager.h  main.cpp  qr_export.cpp  qr_export.h  search.cpp  search.h  sidebar.cpp  sidebar.h  sidebar_dialog.cpp  sidebar_dialog.h  sidebar_file.cpp  sidebar_file.h  sidebar_file_dialog.cpp  sidebar_file_dialog.h  sidebar_file_utils.cpp  sidebar_file_utils.h  sidebar_folder.cpp  sidebar_folder.h  text_navigation.cpp  text_navigation.h  textarea_utils.cpp  textarea_utils.h  theme.h
src/icons/: add_document_icon.cpp  add_document_icon.h  add_folder_icon.cpp  add_folder_icon.h  battery_icon.cpp  battery_icon.h  magnifying_glass_icon.cpp  magnifying_glass_icon.h
tests/: test_text_navigation.cpp
